--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>I love to code in Luau and Python. I have made a Python package and a Windows application. I'm currently learning the basics of web development. I'm starting to learn some Rust and back-end development.</p>
+        <p>I love to code in Luau and Python. I have made a Python package and a Windows application. I'm solidifying the basics of web development. I hope to finish learning some Rust and backend development within the month of April.</p>
     </section>
 
     <!-- Projects Section -->
