--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
             <tbody>
                 <tr>
                     <td>AudioMorph</td>
-                    <td>An audio format converter application.</td>
+                    <td>An audio format converter application.
+                        <div class="images">
+                            <img src="Image1.png" alt="Image of the audio converter.">
+                            <img src="Image2.png" alt="Image of the audio downloader.">
+                        </div>
+                    </td>
                     <td><a href="https://github.com/RinkyDinkyNooble/AudioMorph" target='_blank'>GitHub</a></td>
                     <td><button class="project-button" id="AudioMorph-button" onclick="onShowPress('AudioMorph')">Show Details</button></td>
                 </tr>
