updated to include my new project

--- a/index.html
+++ b/index.html
@@ -57,10 +57,18 @@
                     <td><a href="https://github.com/RinkyDinkyNooble/extdict" target='_blank'>GitHub</a></td>
                     <td><button class="project-button" id="ExtDict-button" onclick="onShowPress('ExtDict')">Show Details</button></td>
                 </tr>
+
+                <tr>
+                    <td>Anonymous Message Board</td>
+                    <td>A website that lets you message with everyone else on the <a href="https://student7898.github.io/anonymous-message-board/" target='_blank'>website</a> anonymously.</td>
+                    <td><a href="https://github.com/student7898/anonymous-message-board" target='_blank'>GitHub</a></td>
+                    <td><button class="project-button" id="AMB-button" onclick="onShowPress('AMB')">Show Details</button></td>
+                </tr>
             </tbody>
         </table>
         <p id="AudioMorph"></p>
         <p id="ExtDict"></p>
+        <p id="AMB"></p>
     </section>
 
     <!-- Contact Section -->
